src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwP0.25-b-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault column width: P0.25\nborder on\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 283 × 680, bounds: 1231 × 680, states: []

post-map configures:
size: 283 × 680, bounds: 1231 × 680, states: []
size: 283 × 680, bounds: 1231 × 680, states: [Activated]
